Implement caching and update timer features

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -29,7 +29,9 @@
       </div>
 
       <div id="activity" class="page">
-        <h2>Activity</h2>
+        <div class="page-header">
+          <h2>Activity</h2>
+        </div>
         <div id="graphql-results"></div>
       </div>
 
@@ -47,7 +49,9 @@
       </div>
 
       <div id="leaderboard" class="page">
-        <h2>Leaderboard</h2>
+        <div class="page-header">
+          <h2>Leaderboard</h2>
+        </div>
         <div class="leaderboard-tabs">
           <button class="leaderboard-tab daily" data-difficulty="Daily">Daily</button>
           <button class="leaderboard-tab easy" data-difficulty="Easy">Easy</button>
@@ -62,7 +66,9 @@
 
       <div id="strikes" class="page">
         <div class="strikes-header">
-          <h2>Strikes</h2>
+          <div class="page-header">
+            <h2>Strikes</h2>
+          </div>
           <button id="copy-strikes-btn" class="copy-btn" title="Copy strikes to clipboard">📋</button>
         </div>
         <div class="strikes-settings">
